applications/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: theater-vaultwarden
  namespace: theater-vaultwarden
spec:
  selector:
    app: theater-vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
