applications/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: theater-vaultwarden
  namespace: theater-vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    # Replaced from Certificate.spec.dnsNames[0] by kustomization.yaml.
    - match: Host(`vaultwarden.invalid`)
      kind: Rule
      services:
        - name: theater-vaultwarden
          port: 80
  tls:
    secretName: theater-vaultwarden-tls
